[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/theme_for_buttons.tres" type="Theme" id=1]
[ext_resource path="res://texts/fontSources/17543.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://mesh/main menu/options.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 1
outline_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
font_data = ExtResource( 2 )

[node name="Options Container" type="PopupMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -568.0
margin_bottom = -352.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="."]
margin_right = 712.0
margin_bottom = 368.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Опции"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Volume" type="HSlider" parent="."]
margin_left = 8.0
margin_top = 88.0
margin_right = 508.0
margin_bottom = 104.0
max_value = 1.0
step = 0.01
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Volume"]
margin_top = 16.0
margin_right = 496.0
margin_bottom = 40.0
max_value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeLabel" type="Label" parent="Volume"]
margin_left = 136.0
margin_top = -29.0
margin_right = 380.0
margin_bottom = -5.0
text = "Громость"
align = 1

[node name="Back" type="Button" parent="."]
margin_left = 8.0
margin_top = 320.0
margin_right = 704.0
margin_bottom = 360.0
text = "Назад"

[connection signal="about_to_show" from="." to="." method="_on_Options_Container_about_to_show"]
[connection signal="value_changed" from="Volume" to="." method="_on_Volume_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
